# allomorph

./: .agent.md  .gitignore  .prompt.md  .readthedocs.yaml  .skill.md  AGENTS.md  CHANGELOG.md  DEPENDENCIES.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci-cd.yml  ci.yml
EAM/: README.md  create_eam.py
InitStruct/: constants.py  genBNPAL.py  genMNP.py  genTNPAL.py
MDsim/: annealS0.in  annealS1.in  annealS2.in
docs/: api.md  conf.py  configuration.md  demo.ipynb  index.md  index.rst  installation.md  usage.md
docs/_build/doctrees/: api.doctree  configuration.doctree  index.doctree  index_rst_backup.doctree  installation.doctree  usage.doctree
docs/_build/html/: .buildinfo  api.html  configuration.html  genindex.html  index.html  index_rst_backup.html  installation.html  objects.inv  search.html  searchindex.js  usage.html
docs/_build/html/_sources/: api.md.txt  configuration.md.txt  index.rst.txt  index_rst_backup.rst.txt  installation.md.txt  usage.md.txt
examples/: basic_workflow.py  test_config.yaml
extras/eam/: __init__.py  create_eam.py
extras/feat_ext_eng/: __init__.py
extras/md_sim/: setup.py
src/allomorph/: __init__.py  __main__.py  cli.py  constants.py
src/allomorph/eam/: __init__.py  create_eam.py
src/allomorph/feat_ext_eng/: __init__.py  gen_csvs.py  merge_features.py
src/allomorph/init_struct/: __init__.py  gen_bnp_al.py  gen_bnp_cs.py  gen_mnp.py  gen_tnp_al.py
src/allomorph/md_sim/: generator.py  manager.py  submission.py
src/np_gen/: __init__.py  __main__.py  cli.py  constants.py
src/np_gen/eam/: __init__.py  create_eam.py  eam_database.py
src/np_gen/feat_ext_eng/: __init__.py  gen_csvs.py  merge_features.py
src/np_gen/init_struct/: __init__.py  gen_bnp_al.py  gen_bnp_cs.py  gen_mnp.py  gen_tnp_al.py
src/np_gen/md_sim/: generator.py
src/tnp_gen/: __init__.py  __main__.py  cli.py  constants.py
src/tnp_gen/eam/: __init__.py  create_eam.py  eam_database.py
src/tnp_gen/feat_ext_eng/: __init__.py  gen_csvs.py  merge_features.py
src/tnp_gen/init_struct/: __init__.py  gen_bnp_al.py  gen_bnp_cs.py  gen_mnp.py  gen_tnp_al.py
src/tnp_gen/md_sim/: generator.py  manager.py  setup.py  submission.py
tests/: __init__.py  test_eam.py  test_imports.py  test_init_struct.py  test_md_sim.py  test_validation.py
