[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tnp-gen"
version = "0.1.0"
description = "Toolkit for generating trimetallic nanoparticle (TNP) structural datasets for machine learning."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Jonathan Yik Chang Ting" },
]
keywords = [
    "nanoparticles",
    "machine-learning",
    "materials-science",
    "LAMMPS",
    "EAM",
    "molecular-dynamics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy",
    "pandas",
    "ase",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]

[project.scripts]
tnp-gen = "tnp_gen.cli:main"

[project.urls]
Homepage = "https://github.com/jonathan-ting/tnp-gen"
"Bug Tracker" = "https://github.com/jonathan-ting/tnp-gen/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/tnp_gen"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"
